import java.awt.Image;

public class Sprite implements Cloneable {
    private boolean visible;
    private Image image;
    protected int x;
    protected int y;
    protected boolean dying;
    protected int dx;

    public Sprite() {
        visible = true;
    }

    @Override
    public Sprite clone() {
        try {
            return (Sprite) super.clone();
        } catch (CloneNotSupportedException e) {
            throw new AssertionError();
        }
    }

    public void die() {
        visible = false;
    }

    public boolean isVisible() { return visible; }

    protected void setVisible(boolean visible) { this.visible = visible; }

    public void setImage(Image image) { this.image = image; }

    public Image getImage() { return image; }

    public void setX(int x) { this.x = x; }
    public void setY(int y) { this.y = y; }
    public int getY() { return y; }
    public int getX() { return x; }
    public void setDying(boolean dying) { this.dying = dying; }
    public boolean isDying() { return this.dying; }
}
